# sync_stream

./: Cargo.toml  readme.md
crates/sync_stream_struct_proc/: Cargo.toml  readme.md
crates/sync_stream_struct_proc/src/: lib.rs
examples/: simple.rs
src/: lib.rs
