[package]
name = "sync_stream"
version = "0.1.0"
edition = "2021"
description = "Aggregate multiple streams by polling stream items in order, keeping the consumption of multiple streams in sync."
repository = "https://github.com/andrewlowndes/sync_stream"
license = "MIT OR Apache-2.0"
keywords = ["stream", "aggregate", "macro"]
categories = ["asynchronous", "rust-patterns"]

[lib]

[dependencies]
futures = "0.3.28"
mixed_array = "0.1.1"
pin-project = "1.1.2"
sync_stream_struct_proc = "0.1.0"

[dev-dependencies]
async-stream = "0.3.5"
chrono = "0.4.26"
rand = "0.8.5"
tokio = { version="1.29.1", features=["full"] }
